--- a/environment.yml
+++ b/environment.yml
@@ -50,6 +50,7 @@ dependencies:
   - ipython_genutils=0.2.0=py_1
   - jedi=0.18.0=py38h578d9bd_2
   - jinja2=2.11.3=pyh44b312d_0
+  - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9b=h024ee3a_2
   - json5=0.9.5=pyh9f0ad1d_0
   - jsonschema=3.2.0=pyhd8ed1ab_3
@@ -102,6 +103,7 @@ dependencies:
   - openh264=2.1.1=h780b84a_0
   - openssl=1.1.1j=h27cfd23_0
   - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.3=py38ha9443f7_0
   - pandoc=2.12=h7f98852_0
   - pandocfilters=1.4.2=py_1
   - parso=0.8.1=pyhd8ed1ab_0
@@ -132,6 +134,7 @@ dependencies:
   - readline=8.0=he28a2e2_2
   - requests=2.25.1=pyhd3deb0d_0
   - scikit-image=0.17.2=py38hdf5156a_0
+  - scikit-learn=0.24.1=py38ha9443f7_0
   - scipy=1.6.1=py38h91f5cce_0
   - send2trash=1.5.0=py_0
   - setuptools=49.6.0=py38h578d9bd_3
@@ -141,6 +144,7 @@ dependencies:
   - sqlite=3.34.0=h74cdb3f_0
   - terminado=0.9.2=py38h578d9bd_0
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tifffile=2020.10.1=py38hdd07704_2
   - tk=8.6.10=h21135ba_1
   - toolz=0.11.1=pyhd3eb1b0_0
